2006-12-21  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-filter.el (w3m-filter-rules): Add rule for the site of Google.
	(w3m-filter-google-use-utf8): New user option.
	(w3m-filter-google-use-ruled-line): Ditto.
	(w3m-filter-google): New function.

2006-12-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yahoo.el (shimbun-yahoo-content-start)
	(shimbun-yahoo-content-end): Follow site change.

2006-12-14  Hiroaki Irokawa  <irorin@terra.dti.ne.jp>

	* shimbun/sb-vinelinux.el (shimbun-vinelinux-group-path-alist):
	Add errata.4x.i386 and errata.4x.ppc groups.

2006-12-13  Andreas Seltenreich  <uwi7@rz.uni-karlsruhe.de>

	* shimbun/sb-zeit-de.el: Adapt to markup and group changes.

2006-12-13  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Fix amazon entry.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* aclocal.m4 (AC_EXAMINE_PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies as well as
	(early|late|last)-packages; prefer them to configure-package-path.

2006-12-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-form.el: Changes to create a new session after submitting
	form.
	(w3m-form-new-session): New variable.
	(w3m-fontify-textareas, w3m-form-parse-and-fontify): Combine the
	above variable into expressions which represent form actions.
	(w3m-form-submit): Accept and optional argument `new-session'.

	* w3m.el: Changes to create a new session after submitting form.
	(w3m-submit-form): Accept and optional argument `new-session'.
	`w3m-form-new-session' is binded locally.
	(w3m-view-this-url): `w3m-form-new-session' is binded locally.

2006-12-08  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-view-parent-page): Add prefix argument `TOP'. If TOP
	is non-nil, visit the top of this site."
	(w3m-parent-page-available-p): Fix regexp.

2006-12-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* patches/README: Update.
	* patches/italic-text.patch: New file.
	* patches/dot-domain.patch: New file.