@@ -1,3 +1,12 @@
+2007-01-05  David Hansen  <david.hansen@physik.fu-berlin.de>
+
+	* shimbun/sb-the-register.el (shimbun-make-contents): Improve junk
+	filtering.
+	(shimbun-the-register-content-end): Fixed.
+
+	* shimbun/sb-weeklyworldnews.el: Complete rewrite to follow the
+	site changes.
+
 2006-12-21  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m-filter.el (w3m-filter-rules): Add rule for the site of Google.
